add_subdirectory(AudioCommon)
add_subdirectory(Common)
add_subdirectory(Core)
add_subdirectory(DiscIO)
add_subdirectory(DolphinWX)
add_subdirectory(InputCommon)
add_subdirectory(UICommon)
add_subdirectory(VideoCommon)
add_subdirectory(VideoBackends)

if(ENABLE_QT)
	add_subdirectory(DolphinQt)
endif()

if (IOS)
	message(“building iOS host file”)
	add_subdirectory(DolphiniOS)
endif()
